Fixed grip-gap sizes

--- a/app/assets/stylesheets/pages/_beats.scss
+++ b/app/assets/stylesheets/pages/_beats.scss
@@ -208,9 +208,11 @@
 .beat-inputs {
   display: grid;
   grid-template-columns: 3fr 6.5em 6.5em;
+  grid-gap: 15px;
 
   @media only screen and (max-width: 920px) {
     grid-template-columns: 1fr; 
+    grid-gap: 15px;
   }
 
   &__button {
@@ -223,9 +225,11 @@
 .beat-inputs-2 {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-gap: 15px;
 
   @media only screen and (max-width: 1000px) {
     grid-template-columns: 1fr; 
+    grid-gap: 15px;
   }
 }
 
@@ -238,13 +242,16 @@
   &__inputs {
     display: grid;
     grid-template-columns: 7.5em 7.5em 7.5em 3fr;
+    grid-gap: 15px;
 
     @media only screen and (max-width: 1160px) {
       grid-template-columns: 1fr 1fr; 
+      grid-gap: 15px;
     }
 
     @media only screen and (max-width: 900px) {
       grid-template-columns: 1fr !important; 
+      grid-gap: 15px;
       width: 100%;
     }
   }
